--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 alembic==1.4.3
+blinker==1.4
 click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.2
 Flask==1.1.2
+Flask-Dropzone==1.5.4
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
@@ -12,6 +15,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+Pillow==8.0.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
