--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
+Flask-WhooshAlchemy==0.56
 Flask-WTF==0.14.3
 gunicorn==20.1.0
 idna==2.10
@@ -17,11 +18,11 @@ Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 Pillow==8.0.1
-psycopg2==2.8.6
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.3.20
 Werkzeug==1.0.1
+Whoosh==2.7.4
 WTForms==2.3.3
