--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 Pillow==8.0.1
+psycopg2==2.8.6
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
