--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ Flask-Dropzone==1.5.4
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
+flask-msearch==0.2.9.2
 Flask-SQLAlchemy==2.4.4
-Flask-WhooshAlchemy==0.56
 Flask-WTF==0.14.3
 gunicorn==20.1.0
 idna==2.10
